[package]
name = "prql-book-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
prql-compiler = { version = "0.9.5", default-features = false }
pulldown-cmark = { version = "0.9.3", default-features = false }
ansi-to-html = "0.1.3"
anstream = "0.3.2"
strum = {version = "0.25.0", features = ["std", "derive"]}
pulldown-cmark-to-cmark = "11.0.0"
